--- a/app/src/main/res/layout/row_pdf_admin.xml
+++ b/app/src/main/res/layout/row_pdf_admin.xml
@@ -18,13 +18,8 @@
             android:layout_marginRight="5dp"
             android:background="@color/gray01">
 
-            <com.github.barteksc.pdfviewer.PDFView
-                android:id="@+id/pdfView"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
-
-            <ProgressBar
-                android:id="@+id/progressBar"
+            <ImageView
+                android:id="@+id/bookIv"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"/>
 
@@ -71,7 +66,7 @@
                 android:src="@drawable/ic_pdf_white"
                 android:tint="@color/white"
                 app:fabCustomSize="35dp"
-                android:backgroundTint="#8EBCE1"/>
+                android:backgroundTint="#00BCD4"/>
 
             <TextView
                 android:id="@+id/descriptionTv"
