--- a/app/src/main/res/layout/row_pdf_favorite.xml
+++ b/app/src/main/res/layout/row_pdf_favorite.xml
@@ -20,13 +20,8 @@
             android:layout_marginRight="5dp"
             android:background="@color/gray01">
 
-            <com.github.barteksc.pdfviewer.PDFView
-                android:id="@+id/pdfView"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
-
-            <ProgressBar
-                android:id="@+id/progressBar"
+            <ImageView
+                android:id="@+id/bookIv"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"/>
 
