--- a/app/src/main/res/layout/activity_pdf_view.xml
+++ b/app/src/main/res/layout/activity_pdf_view.xml
@@ -27,7 +27,7 @@
             android:id="@+id/titleTv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Book"
+            android:text="subBook"
             android:layout_marginTop="8dp"
             android:layout_centerHorizontal="true"
             android:textStyle="bold"
