--- a/app/src/main/res/layout/row_pdf_admin.xml
+++ b/app/src/main/res/layout/row_pdf_admin.xml
@@ -21,7 +21,8 @@
             <ImageView
                 android:id="@+id/bookIv"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
+                android:layout_height="match_parent"
+                android:scaleType="center"/>
 
         </RelativeLayout>
 
