--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background1"
+    android:background="@drawable/garaxyfantasia"
     tools:context=".Activities.SplashActivity">
 
     <ImageView
@@ -18,8 +18,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="세상의 모든 소설 Nori World"
-        android:textColor="#FFFFFF"
+        android:textColor="#FF4444"
         android:textSize="28sp"
+        android:textStyle="bold"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
         android:layout_below="@id/icon_Iv"/>
