--- a/app/src/main/res/layout/row_pdf_user.xml
+++ b/app/src/main/res/layout/row_pdf_user.xml
@@ -21,7 +21,8 @@
             <ImageView
                 android:id="@+id/bookIv"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
+                android:layout_height="match_parent"
+                android:scaleType="center"/>
 
         </RelativeLayout>
 
@@ -47,9 +48,8 @@
                 android:layout_below="@+id/titleTv"
                 android:maxLines="3"
                 android:text="Description"
-
                 android:textColor="@color/black"
-                style="@style/TextAppearance.MaterialComponents.Body2"/>
+                android:textSize="12sp"/>
 
             <RelativeLayout
                 android:id="@+id/infoRl"
