--- a/app/src/main/res/layout/row_home_book.xml
+++ b/app/src/main/res/layout/row_home_book.xml
@@ -25,7 +25,8 @@
                 android:id="@+id/bookIv"
                 android:scaleType="center"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
+                android:layout_height="match_parent"
+                android:scaleType = "fitXY"/>
 
         </RelativeLayout>
 
