--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/homeback"
+    android:background="@color/white"
     tools:context=".Activities.HomeActivity">
 
     <!--    toolBar-->
@@ -53,7 +53,7 @@
             android:src="@drawable/ic_power_white" />
     </RelativeLayout>
 
-    <!--    메인 화면-->
+<!--    메인 화면-->
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -63,51 +63,49 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <!--             광고-->
+<!--             광고-->
             <RelativeLayout
                 android:id="@+id/advertiseRl"
                 android:layout_width="match_parent"
-                android:layout_height="200dp">
+                android:layout_height="130dp">
 
                 <ImageView
                     android:id="@+id/adIv"
-                    android:scaleType="center"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent" />
+                    android:layout_height="match_parent"/>
 
 
             </RelativeLayout>
 
-            <!--            추천작 -->
+<!--            추천작 -->
             <View
                 android:id="@+id/view1"
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:layout_below="@id/advertiseRl"
                 android:layout_marginTop="8dp"
-                android:background="@color/gray01" />
-
+                android:background="@color/gray01"
+                android:layout_below="@id/advertiseRl"/>
             <TextView
                 android:id="@+id/featuredBestTv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/view1"
                 android:text="추천작"
-                android:textColor="@color/black" />
+                android:textColor="@color/black"
+                android:layout_below="@id/view1"/>
 
 
             <!--            조회수 별 -->
-
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/featuredBestRv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/featuredBestTv"
                 android:layout_alignParentEnd="true"
-                android:layout_marginTop="1dp"
+                android:layout_marginTop="3dp"
                 android:layout_marginEnd="0dp"
                 android:orientation="horizontal"
                 android:scrollbars="none"
+                app:reverseLayout="true"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 tools:listitem="@layout/row_home_book" />
 
@@ -115,17 +113,17 @@
                 android:id="@+id/view2"
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:layout_below="@id/featuredBestRv"
                 android:layout_marginTop="8dp"
-                android:background="@color/gray01" />
+                android:background="@color/gray01"
+                android:layout_below="@id/featuredBestRv"/>
 
             <TextView
                 android:id="@+id/countBestTv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/view2"
                 android:text="조회수 베스트"
-                android:textColor="@color/black" />
+                android:textColor="@color/black"
+                android:layout_below="@id/view2"/>
 
 
             <androidx.recyclerview.widget.RecyclerView
@@ -133,11 +131,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/countBestTv"
-                android:orientation="horizontal"
-                android:scrollbars="none"
                 app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+                android:scrollbars="none"
+                android:orientation="horizontal"
+                app:reverseLayout="true"
                 app:spanCount="2"
-                tools:listitem="@layout/row_home_book" />
+                tools:listitem="@layout/row_home_book"/>
 
             <!--            선호작 별-->
 
@@ -145,9 +144,9 @@
                 android:id="@+id/view3"
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:layout_below="@id/countBestRv"
                 android:layout_marginTop="8dp"
-                android:background="@color/gray01" />
+                android:background="@color/gray01"
+                android:layout_below="@id/countBestRv"/>
 
             <TextView
                 android:id="@+id/favoriteTv"
@@ -165,6 +164,7 @@
                 android:layout_alignParentEnd="true"
                 android:layout_marginEnd="0dp"
                 android:orientation="horizontal"
+                app:reverseLayout="true"
                 app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                 app:spanCount="2"
                 tools:listitem="@layout/row_home_book" />
@@ -173,16 +173,15 @@
                 android:id="@+id/view4"
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:layout_below="@id/favoriteRv"
                 android:layout_marginTop="8dp"
-                android:background="@color/gray01" />
+                android:background="@color/gray01"
+                android:layout_below="@id/favoriteRv"/>
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/view4"
-                android:text="by 팀 노리월드"
-                android:textColor="@color/white" />
+                android:text="기업 소개"/>
+
 
 
         </RelativeLayout>
