--- a/app/src/main/res/layout/activity_text_view.xml
+++ b/app/src/main/res/layout/activity_text_view.xml
@@ -5,16 +5,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".TextViewActivity">
+    tools:context=".Activities.TextViewActivity">
 
     <TextView
         android:id="@+id/textTv"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:fontFamily="@font/fontstyle"
-        android:text="연습/n/ 1231313d1111111111111111111111111111111111111111111111111111111111111err"
+        android:text=""
         android:textColor="@color/black"
         android:lineSpacingExtra="10dp"
         android:textSize="20sp" />
@@ -24,6 +24,33 @@
         android:layout_centerInParent="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
+    
+    <View
+        android:id="@+id/view1"
+        android:layout_below="@id/textTv"
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:layout_marginTop="10dp"
+        android:background="@color/gray01"/>
+    
+    <RelativeLayout
+        android:layout_below="@+id/view1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+<!--        댓글 버튼-->
+        <ImageButton
+            android:id="@+id/addCommentBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:background="@android:color/transparent"
+            android:src="@drawable/ic_comment_add_black"
+            android:padding="5dp"/>
+
+
+
+    </RelativeLayout>
 
 
 
