--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,8 +4,11 @@
     <style name="styleRoundedConersImage">
         <item name="cornerFamily">rounded</item>
         <item name="cornerSize">20%</item>
-
-
+    </style>
+<!--    투명 배경 다이아로그-->
+    <style name="CustomDialog" parent="android:Theme.Dialog">
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
     </style>
 
 </resources>
