--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="gray01">#c5c5c5</color>.
     <color name="gray02">#AAAAAA</color>
+    <color name="gold">#d6b534</color>
 </resources>
