--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/homeback"
+    android:orientation="vertical"
     tools:context=".Activities.HomeActivity">
 
     <!--    toolBar-->
@@ -42,6 +43,27 @@
             android:text="Dashboard user"
             android:textColor="@color/white" />
 
+<!--        노리 코인-->
+        <ImageView
+            android:id="@+id/noriGoldIv"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_centerVertical="true"
+            android:layout_toStartOf="@id/noriGoldTv"
+            android:src="@drawable/ic_norigold_gold"/>
+
+        <TextView
+            android:id="@+id/noriGoldTv"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toStartOf="@id/logoutBtn"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="5dp"
+            android:text="0원"
+            android:textStyle="bold"
+            android:textColor="@color/black" />
+
+
         <ImageButton
             android:id="@+id/logoutBtn"
             android:layout_width="wrap_content"
@@ -55,9 +77,11 @@
 
 <!--    메인 화면-->
     <ScrollView
+        android:id="@+id/bookSv"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/toolbarRl">
+        android:layout_height="0dp"
+        android:layout_weight="1">
+<!--        android:layout_below="@id/toolbarRl">-->
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -72,7 +96,8 @@
                 <ImageView
                     android:id="@+id/adIv"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"/>
+                    android:layout_height="match_parent"
+                    android:scaleType="fitXY" />
 
 
             </RelativeLayout>
@@ -133,11 +158,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/countBestTv"
-                android:layout_marginTop="-2dp"
                 android:orientation="horizontal"
                 android:scrollbars="none"
-                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                 app:reverseLayout="false"
+                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                 app:spanCount="2"
                 tools:listitem="@layout/row_home_book" />
 
@@ -195,7 +219,6 @@
         android:id="@+id/bottomNav"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
         android:background="@drawable/shape_menu01"
         app:itemIconTint="#ffff"
         app:itemTextColor="#ffff"
@@ -203,4 +226,7 @@
         app:menu="@menu/bottom_navigation_menu" />
 
 
-</RelativeLayout>
+<!--    android:layout_alignParentBottom="true"-->
+
+
+</LinearLayout>
