--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -16,4 +16,9 @@
         android:icon="@drawable/ic_favorite_white"
         android:title="선호작"/>
 
+    <item android:id="@+id/info"
+        android:enabled="true"
+        android:icon="@drawable/ic_info_white"
+        android:title="정보"/>
+
 </menu>
