--- a/app/src/main/res/layout/row_home_book.xml
+++ b/app/src/main/res/layout/row_home_book.xml
@@ -9,16 +9,16 @@
 
     <RelativeLayout
         android:id="@+id/clikable"
-        android:layout_width="80dp"
+        android:layout_width="70dp"
         android:layout_height="140dp">
 
         <!--        pdf-->
         <RelativeLayout
             android:id="@+id/pdfRl"
-            android:layout_width="80dp"
-            android:layout_height="100dp"
+            android:layout_width="60dp"
+            android:layout_height="90dp"
             android:layout_centerHorizontal="true"
-            android:layout_margin="2dp"
+            android:layout_margin="3dp"
             android:background="@color/gray01">
 
             <ImageView
@@ -48,11 +48,18 @@
 
             <TextView
                 android:id="@+id/viewCountTv"
-                style="@style/TextAppearance.MaterialComponents.Caption"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="3dp"
                 android:layout_below="@id/titleTv"
+                android:textSize="9sp"
+                android:text="count"
+                android:textColor="@color/black" />
+
+            <TextView
+                android:id="@+id/favoriteCountTv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/viewCountTv"
                 android:textSize="9sp"
                 android:text="count"
                 android:textColor="@color/black" />
